# worldmonitor

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Makefile  package.json  vite.config.ts
.husky/: pre-push
api/: _client-ip.js  _usage-telemetry.js  api-route-exceptions.json  bootstrap.js  health.js  seed-health.js  wm-session.test.mjs
docs/: algorithms.mdx  changelog.mdx  country-instability-index.mdx  docs.json  features.mdx  health-endpoints.mdx  overview.mdx  sdks.mdx  strategic-risk.mdx
e2e/: live-media-intent.spec.ts
pro-test/: index.html  welcome.html
public/: llms.txt
scripts/: _climate-zones.mjs  _ucdp-dashboard.mjs  openapi-inject-examples.mjs  seed-cross-source-signals.mjs  seed-forecasts.mjs  seed-military-cii.mjs  seed-portwatch-port-activity.mjs  seed-ucdp-events.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/src/worldmonitor_sdk/: __init__.py
sdk/python/tests/: test_client.py
tests/: cii-scoring.test.mts  conflict-ucdp-date-window.test.mts  deploy-config.test.mjs  forecast-detectors.test.mjs  forecast-integrity-provenance.test.mjs  health-classify.test.mjs  live-media-controller.test.mts  mcp-bootstrap-parity.test.mjs  mcp-error-fingerprint.test.mjs  mcp.test.mjs  openapi-examples-contract.test.mjs  panel-attached-fetch-guard.test.mts  panel-mount-deferral.test.mts  panel-run-when-connected.test.mts  portwatch-port-activity-seed.test.mjs  redis-caching.test.mjs  regional-snapshot.test.mjs  resilience-doc-parity.test.mts  sdk-packages.test.mjs  seed-health-portwatch-port-activity.test.mjs  seed-military-cii-table-drift.test.mts  (+2 more)
(+132 files in other folders)
